<resources>
    <string name="app_name">Excel Edit</string>
    <string name="welcome_to_excel_edit">Welcome to Excel Edit 📃</string>
    <string name="create_an_excel">Create an Excel</string>
    <string name="insert_modify_the_excel">Insert/Modify the Excel</string>
    <string name="delete_an_excel_file">Delete an Excel file</string>
    <string name="display_the_excel_file">Display the Excel File</string>
    <string name="select_excel">Select an Excel File</string>
    <string name="name_of_excel_file">Name of Excel File</string>
    <string name="operations_with_new_excel_file">Operations with New Excel File:</string>
    <string name="operations_with_existing_excel_file">Operations with Existing Excel File:</string>
    <string name="no_files_remaining">No files remaining</string>
    <string name="select_another_file">Select file to Operate</string>
    <string name="no_of_columns">No. of Columns</string>
    <string name="enter_column_data">Enter Column Name</string>
    <string name="no_of_rows">No. of Rows</string>
    <string name="txt_clickable_know_about_us">\"About This Application\"</string>
    <string name="know_about_us_desc">
        This app will be able to create excel files for you and fill the data for you with just a tap
        on the share button of any other application.\n\n
        ---How to send data from another application?---\n
        • Just choose any text\n
        • Tap Share\n
        • Select this application\n
        • Enter the name of the excel.\n
        • Check the Excel Edit folder in Documents folder in your file manager.\n\n

        ---How to delete a file?---\n
        • Select the file from the drop down menu list.\n
        • Click Delete Excel button
    </string>
</resources>