<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/home_welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondaryVariant"
        android:fontFamily="@font/tangerine_regular"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/welcome_to_excel_edit"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_excel"
        style="@style/home_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/create_an_excel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_welcome_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_modify_excel"
        style="@style/home_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/insert_modify_the_excel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_excel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_excel"
        style="@style/home_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/delete_an_excel_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_modify_excel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_display_excel"
        style="@style/home_button_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:text="@string/display_the_excel_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_delete_excel" />
</androidx.constraintlayout.widget.ConstraintLayout>